<resources>
    <string name="app_name">Quick Cart</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_shopping_cart">Shopping Cart</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="brands">Brands</string>
    <string name="noInternet">No Interent</string>
    <string name="price">Price</string>
    <string name="shoes">SHOES</string>
    <string name="accessories">ACCESSORIES</string>
    <string name="tshirts">T-SHIRTS</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>
    <string name="kids">Kids</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="sale">Sale</string>
    <string name="orders_history">Orders History</string>


    <string name="guest_mode">Guest Mode</string>
    <string name="password_login">Password</string>
    <string name="login_button">Login</string>
    <string name="email_login">Email</string>
    <string name="welcome_back">Welcome Back! 👋</string>
    <string name="continue_as_guest">Continue</string>
    <string name="dont_have_an_account">Don\'t have an account?\u0020</string>
    <string name="register">Register!</string>
    <string name="sign_up">Sign Up! 📝</string>
    <string name="email_signup">Email</string>
    <string name="password_signup">Password</string>
    <string name="firstname_signup">First Name</string>
    <string name="lastName_signup">Last Name</string>
    <string name="signup_button">Sign Up</string>
    <string name="already_have_an_account">Already have An Account?\u0020</string>
    <string name="login">Login!</string>
    <string name="confirm_password_signup">Confirm Password</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="account_created_successfully">Your account has been created. Check your inbox and verify your account!</string>
    <string name="email_invalid">Invalid Email</string>
    <string name="password_invalid_length_small">Password must be more than 6 characters</string>
    <string name="password_invalid_at_least_1_letter_1_number">Password must have at least 1 letter and 1 number</string>
    <string name="confirm_password_invalid">Passwords do not match</string>
    <string name="fragment_login">Login</string>
    <string name="fragment_signup">Sign Up</string>
    <string name="dialog_on_confirm_default">Confirm</string>
    <string name="dialog_on_cancel_default">Cancel</string>
    <string name="you_wont_have_access_to_features">You won\'t have access to most features (Favorites, Shopping Cart)</string>
    <string name="submit_address">Submit Address</string>
    <string name="street_name">Street Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address_details">Address Details</string>
    <string name="sizes_text">Sizes:</string>
    <string name="colors_text">Colors:</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="in_stock">In Stock:\u0020</string>
    <string name="products_amount_text">0</string>
    <string name="price_text">Total:\u0020</string>
    <string name="product_added_successfully">Product Added To Cart Successfully!</string>
    <string name="product_added_unsuccessfully">Couldn\'t add product To Cart, Try Again?</string>
    <string name="permission_denied_body">You must be logged in to access these features.</string>


    <string name="order_items">Order Items</string>
    <string name="order_details">Order Details</string>
    <string name="order_id">Order ID:</string>
    <string name="home_address">Delivery Address</string>
    <string name="subtotal">Subtotal</string>
    <string name="total_tax">Total Tax</string>
    <string name="total_cost">Total Cost</string>
    <string name="no_orders">>Woohoo! It looks like you haven’t added any orders yet! Start shopping now and make your first order!</string>


    <string name="address">Address</string>
    <string name="delete">Delete</string>
    <string name="delete_address_message">"Are you sure you will deleted this address"</string>
    <string name="remove_from_favorite">Remove From Favorite</string>
    <string name="delete_address">Delete Address</string>


    <string name="unknown">Something went wrong</string>
    <string name="price_variance">Price Variance:\u0020</string>
    <string name="remove_from_favorite_confirmation">Are you sure you want to delete this product from favorites?</string>
    <string name="favorite_removed_successfully">Removed Successfully</string>
    <string name="favorite_removed_unsuccessfully">Failed to remove, please try again later</string>
    <string name="remove_from_favorite_confirmation_part_1">Are you sure you want to delete\u0020</string>
    <string name="remove_from_favorite_confirmation_part_2">\u0020from favorites ?</string>
    <string name="searchbar_hint">Superstar</string>
    <string name="query_hint">Adidas</string>
    <string name="suggestion_list_error">Couldn\'t show suggestions</string>
    <string name="available_sizes">Sizes:\u0020</string>
    <string name="search_empty">There\'s no products with that name</string>
    <string name="signup_loading">Singing up…</string>
    <string name="required">Required*</string>
    <string name="signup_email_will_be_used">Email will be used as your display name\n\n\nContinue?</string>
    <string name="notice">Notice</string>
    <string name="signup_first_name_will_be_used">Only your first name will be used as your display name\n\n\nContinue?</string>
    <string name="signup_last_name_will_be_used">Only your last name will be used as your display name\n\n\nContinue?</string>
    <string name="adding_to_cart">Adding to cart…</string>
    <string name="adding_to_favorite">Adding To Favorites…</string>
    <string name="added_to_favorite">Product Added To Favorites Successfully</string>
    <string name="reviews_title">Reviews</string>
    <string name="save_address">Save Address</string>
    <string name="save_address_message">Are you sure you will add this address</string>
    <string name="add">ADD</string>
    <string name="delete_product">Delete Product</string>
    <string name="delete_product_message">\"Are you sure you will deleted this Product</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_message">Are you sure you will Sign out</string>
    <string name="may_fav">My Favourite</string>
    <string name="search">Search</string>
    <string name="permission_denied_title">Permission Denied</string>
    <string name="logging_in">Logging in…</string>
    <string name="login_success">Login Successful!</string>
    <string name="invalid_password_login">Invalid Password</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="add_address">Add Address</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="app_character">Q\nU\nI\nC\nK\nC\nA\nR\nT</string>


</resources>