<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.senseicoder.quickcart.features.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.senseicoder.quickcart.features.main.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/shoppingCartFragment"
        android:name="com.senseicoder.quickcart.features.main.ui.shopping_cart.ShoppingCartFragment"
        android:label="@string/title_shopping_cart"
        tools:layout="@layout/fragment_shopping_cart" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.senseicoder.quickcart.features.main.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>