<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".features.login.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scroll_view_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/welcome_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/welcome_back"
            android:fontFamily="@font/alexandria_medium"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLoginLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/email_login"
            android:textColorHint="@color/primary_variant"
            app:counterMaxLength="30"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_label"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:paddingStart="48dp"
                android:paddingEnd="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailPasswordLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/password_login"
            android:textColorHint="@color/primary_variant"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/emailLoginLayout"
            app:layout_constraintStart_toStartOf="@+id/emailLoginLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailLoginLayout"
            app:startIconDrawable="@drawable/ic_my_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingStart="48dp"
                android:paddingEnd="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_button"
            android:fontFamily="@font/alexandria_medium"
            app:layout_constraintEnd_toEndOf="@+id/emailPasswordLayout"
            app:layout_constraintStart_toStartOf="@+id/emailPasswordLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailPasswordLayout"
            app:rippleColor="@color/primary_faint" />


        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:id="@+id/continueAsAGuestButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:strokeColor="@color/primary"
            android:text="@string/continue_as_guest"
            android:fontFamily="@font/alexandria_medium"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:rippleColor="@color/primary_faint" />

        <TextView
            android:id="@+id/dont_have_an_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/alexandria_medium"
            android:gravity="center"
            android:text="@string/dont_have_an_account"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.315"
            app:layout_constraintStart_toStartOf="@+id/continueAsAGuestButton"
            app:layout_constraintTop_toBottomOf="@id/continueAsAGuestButton"
            app:layout_constraintVertical_bias="0.003"
            app:layout_constraintWidth_percent="0.1" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alexandria_medium"
            android:text="@string/register"
            android:textColor="@color/primary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/dont_have_an_account_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/dont_have_an_account_text"
            app:layout_constraintTop_toTopOf="@+id/dont_have_an_account_text"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>