<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".features.signup.SignupFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_scroll_view_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/signup_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sign_up"
            android:fontFamily="@font/alexandria_medium"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameSignupLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/firstname_signup"
            android:textColorHint="@color/primary_variant"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_label"
            app:startIconDrawable="@drawable/baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameSignupEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="10"
                android:paddingStart="48dp"
                android:paddingEnd="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameSignupLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/lastName_signup"
            android:textColorHint="@color/primary_variant"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameSignupLayout"
            app:startIconDrawable="@drawable/baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameSignupEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="10"
                android:paddingStart="48dp"
                android:paddingEnd="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailSignupLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/email_signup"
            android:textColorHint="@color/primary_variant"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameSignupLayout"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailSignupEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:paddingStart="48dp"
                android:paddingEnd="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordSignupLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/password_signup"
            android:textColorHint="@color/primary_variant"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/emailSignupLayout"
            app:layout_constraintStart_toStartOf="@+id/emailSignupLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailSignupLayout"
            app:startIconDrawable="@drawable/ic_my_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordSignupEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingStart="48dp"
                android:paddingEnd="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordSignupLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/confirm_password_signup"
            android:textColorHint="@color/primary_variant"
            app:counterMaxLength="20"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/emailSignupLayout"
            app:layout_constraintStart_toStartOf="@+id/emailSignupLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordSignupLayout"
            app:startIconDrawable="@drawable/ic_my_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordSignupEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingStart="48dp"
                android:paddingEnd="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/signup_button"
            android:fontFamily="@font/alexandria_medium"
            app:layout_constraintEnd_toEndOf="@+id/confirmPasswordSignupLayout"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordSignupLayout"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordSignupLayout"
            app:rippleColor="@color/primary_faint" />


        <TextView
            android:id="@+id/already_have_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/alexandria_medium"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.377"
            app:layout_constraintStart_toStartOf="@+id/signupButton"
            app:layout_constraintTop_toBottomOf="@+id/signupButton"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:fontFamily="@font/alexandria_medium"
            android:textColor="@color/primary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/already_have_account_text"
            app:layout_constraintStart_toEndOf="@+id/already_have_account_text"
            app:layout_constraintTop_toBottomOf="@+id/signupButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>